// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`UIH Parser > Bind Block > should parse bind mappings 1`] = `
{
  "blocks": [
    {
      "map": {
        "#email": "user.email",
        "#name": "user.name",
      },
      "type": "Bind",
    },
  ],
  "imports": [],
  "type": "UIHFile",
}
`;

exports[`UIH Parser > Complete UIH File > should parse complete booking example 1`] = `
{
  "blocks": [
    {
      "entries": {
        "route": "/booking",
        "theme": "light",
      },
      "type": "Meta",
    },
    {
      "tokens": {
        "color.primary": "#0E5EF7",
        "radius.card": "16px",
      },
      "type": "Style",
    },
    {
      "mode": "centered",
      "nodes": [
        {
          "children": [
            {
              "kind": "Text",
              "text": "울릉도 여행 예약",
            },
          ],
          "kind": "Element",
          "name": "Card",
          "props": [
            {
              "key": "id",
              "value": "booking-card",
            },
          ],
        },
        {
          "children": [],
          "kind": "Element",
          "name": "Input",
          "props": [
            {
              "key": "id",
              "value": "name",
            },
            {
              "key": "placeholder",
              "value": "이름 입력",
            },
          ],
        },
        {
          "children": [],
          "kind": "Element",
          "name": "Input",
          "props": [
            {
              "key": "id",
              "value": "phone",
            },
            {
              "key": "placeholder",
              "value": "전화번호",
            },
          ],
        },
        {
          "children": [
            {
              "kind": "Text",
              "text": "예약하기",
            },
          ],
          "kind": "Element",
          "name": "Button",
          "props": [
            {
              "key": "variant",
              "value": "primary",
            },
          ],
        },
      ],
      "type": "Layout",
    },
    {
      "events": [
        {
          "name": "submit",
          "steps": [
            {
              "to": "/complete",
              "type": "Navigate",
            },
          ],
        },
      ],
      "type": "Logic",
    },
  ],
  "imports": [],
  "type": "UIHFile",
}
`;

exports[`UIH Parser > Complete UIH File > should parse complete example with state and data 1`] = `
{
  "blocks": [
    {
      "entries": {
        "route": "/users",
      },
      "type": "Meta",
    },
    {
      "declarations": [
        {
          "initialValue": 0,
          "name": "selectedId",
        },
      ],
      "type": "State",
    },
    {
      "fetches": [
        {
          "method": "GET",
          "name": "users",
          "url": "/api/users",
        },
      ],
      "type": "Data",
    },
    {
      "mode": "default",
      "nodes": [
        {
          "children": [
            {
              "kind": "Text",
              "text": "User count: {users.length}",
            },
          ],
          "kind": "Element",
          "name": "Text",
          "props": [],
        },
        {
          "children": [],
          "kind": "Element",
          "name": "Counter",
          "props": [],
        },
      ],
      "type": "Layout",
    },
  ],
  "imports": [
    {
      "from": "./components/Counter.uih",
      "names": [
        "Counter",
      ],
      "type": "Import",
    },
  ],
  "type": "UIHFile",
}
`;

exports[`UIH Parser > Data Block > should parse data fetching block 1`] = `
{
  "blocks": [
    {
      "fetches": [
        {
          "method": "GET",
          "name": "users",
          "url": "/api/users",
        },
        {
          "method": "GET",
          "name": "profile",
          "url": "/api/profile/{id}",
        },
      ],
      "type": "Data",
    },
  ],
  "imports": [],
  "type": "UIHFile",
}
`;

exports[`UIH Parser > Data Block > should parse different HTTP methods 1`] = `
{
  "blocks": [
    {
      "fetches": [
        {
          "method": "GET",
          "name": "users",
          "url": "/api/users",
        },
        {
          "method": "POST",
          "name": "createUser",
          "url": "/api/users",
        },
        {
          "method": "PUT",
          "name": "updateUser",
          "url": "/api/users/{id}",
        },
        {
          "method": "DELETE",
          "name": "deleteUser",
          "url": "/api/users/{id}",
        },
      ],
      "type": "Data",
    },
  ],
  "imports": [],
  "type": "UIHFile",
}
`;

exports[`UIH Parser > I18n Block > should parse i18n entries 1`] = `
{
  "blocks": [
    {
      "entries": {
        "farewell": {
          "en": "Goodbye",
          "ko": "안녕히 가세요",
        },
        "greeting": {
          "en": "Hello",
          "ko": "안녕하세요",
        },
      },
      "type": "I18n",
    },
  ],
  "imports": [],
  "type": "UIHFile",
}
`;

exports[`UIH Parser > Import Statements > should parse multiple import statements 1`] = `
{
  "blocks": [
    {
      "mode": "default",
      "nodes": [
        {
          "children": [
            {
              "kind": "Text",
              "text": "Content",
            },
          ],
          "kind": "Element",
          "name": "Card",
          "props": [],
        },
      ],
      "type": "Layout",
    },
  ],
  "imports": [
    {
      "from": "./Button.uih",
      "names": [
        "Button",
      ],
      "type": "Import",
    },
    {
      "from": "./Card.uih",
      "names": [
        "Card",
      ],
      "type": "Import",
    },
  ],
  "type": "UIHFile",
}
`;

exports[`UIH Parser > Import Statements > should parse multiple imports from same file 1`] = `
{
  "blocks": [
    {
      "mode": "default",
      "nodes": [
        {
          "children": [
            {
              "kind": "Text",
              "text": "Content",
            },
          ],
          "kind": "Element",
          "name": "Card",
          "props": [],
        },
      ],
      "type": "Layout",
    },
  ],
  "imports": [
    {
      "from": "./components",
      "names": [
        "Button",
        "Input",
        "Card",
      ],
      "type": "Import",
    },
  ],
  "type": "UIHFile",
}
`;

exports[`UIH Parser > Import Statements > should parse single import 1`] = `
{
  "blocks": [
    {
      "mode": "default",
      "nodes": [
        {
          "children": [
            {
              "kind": "Text",
              "text": "Click me",
            },
          ],
          "kind": "Element",
          "name": "Button",
          "props": [
            {
              "key": "variant",
              "value": "primary",
            },
          ],
        },
      ],
      "type": "Layout",
    },
  ],
  "imports": [
    {
      "from": "./components/Button.uih",
      "names": [
        "Button",
      ],
      "type": "Import",
    },
  ],
  "type": "UIHFile",
}
`;

exports[`UIH Parser > Layout Block > should parse layout with elements 1`] = `
{
  "blocks": [
    {
      "mode": "centered",
      "nodes": [
        {
          "children": [
            {
              "kind": "Text",
              "text": "Hello World",
            },
          ],
          "kind": "Element",
          "name": "Card",
          "props": [
            {
              "key": "id",
              "value": "demo",
            },
          ],
        },
        {
          "children": [],
          "kind": "Element",
          "name": "Input",
          "props": [
            {
              "key": "id",
              "value": "name",
            },
            {
              "key": "placeholder",
              "value": "Enter name",
            },
          ],
        },
        {
          "children": [
            {
              "kind": "Text",
              "text": "Submit",
            },
          ],
          "kind": "Element",
          "name": "Button",
          "props": [
            {
              "key": "variant",
              "value": "primary",
            },
          ],
        },
      ],
      "type": "Layout",
    },
  ],
  "imports": [],
  "type": "UIHFile",
}
`;

exports[`UIH Parser > Layout Block > should parse layout without label 1`] = `
{
  "blocks": [
    {
      "mode": "default",
      "nodes": [
        {
          "children": [
            {
              "kind": "Text",
              "text": "Simple text",
            },
          ],
          "kind": "Element",
          "name": "Text",
          "props": [],
        },
      ],
      "type": "Layout",
    },
  ],
  "imports": [],
  "type": "UIHFile",
}
`;

exports[`UIH Parser > Logic Block > should parse logic events 1`] = `
{
  "blocks": [
    {
      "events": [
        {
          "name": "submit",
          "steps": [
            {
              "to": "/success",
              "type": "Navigate",
            },
          ],
        },
        {
          "name": "cancel",
          "steps": [
            {
              "message": "Cancelled",
              "type": "Toast",
            },
          ],
        },
      ],
      "type": "Logic",
    },
  ],
  "imports": [],
  "type": "UIHFile",
}
`;

exports[`UIH Parser > Meta Block > should parse basic meta block 1`] = `
{
  "blocks": [
    {
      "entries": {
        "route": "/test",
        "theme": "dark",
      },
      "type": "Meta",
    },
  ],
  "imports": [],
  "type": "UIHFile",
}
`;

exports[`UIH Parser > Motion Block > should parse motion rules 1`] = `
{
  "blocks": [
    {
      "rules": [
        {
          "event": "hover",
          "props": {
            "duration": "200ms",
            "scale": "1.05",
          },
          "selector": "#button",
        },
      ],
      "type": "Motion",
    },
  ],
  "imports": [],
  "type": "UIHFile",
}
`;

exports[`UIH Parser > State Block > should parse state declarations 1`] = `
{
  "blocks": [
    {
      "declarations": [
        {
          "initialValue": 0,
          "name": "count",
        },
        {
          "initialValue": false,
          "name": "isOpen",
        },
        {
          "initialValue": "",
          "name": "username",
        },
      ],
      "type": "State",
    },
  ],
  "imports": [],
  "type": "UIHFile",
}
`;

exports[`UIH Parser > State Block > should parse state with different types 1`] = `
{
  "blocks": [
    {
      "declarations": [
        {
          "initialValue": 0,
          "name": "count",
        },
        {
          "initialValue": "Hello",
          "name": "message",
        },
        {
          "initialValue": true,
          "name": "isActive",
        },
      ],
      "type": "State",
    },
  ],
  "imports": [],
  "type": "UIHFile",
}
`;

exports[`UIH Parser > Style Block > should parse style tokens 1`] = `
{
  "blocks": [
    {
      "tokens": {
        "color.primary": "#0E5EF7",
        "radius.card": "16px",
        "spacing.base": "8px",
      },
      "type": "Style",
    },
  ],
  "imports": [],
  "type": "UIHFile",
}
`;

exports[`UIH Parser > Variable References > should parse multiple variables in single prop 1`] = `
{
  "blocks": [
    {
      "mode": "default",
      "nodes": [
        {
          "children": [
            {
              "kind": "Text",
              "text": "Hello {firstName} {lastName}",
            },
          ],
          "kind": "Element",
          "name": "Text",
          "props": [],
        },
      ],
      "type": "Layout",
    },
  ],
  "imports": [],
  "type": "UIHFile",
}
`;

exports[`UIH Parser > Variable References > should parse variable references in props 1`] = `
{
  "blocks": [
    {
      "declarations": [
        {
          "initialValue": 0,
          "name": "count",
        },
      ],
      "type": "State",
    },
    {
      "mode": "default",
      "nodes": [
        {
          "children": [
            {
              "kind": "Text",
              "text": "Count: {count}",
            },
          ],
          "kind": "Element",
          "name": "Text",
          "props": [],
        },
        {
          "children": [
            {
              "kind": "Text",
              "text": "Click",
            },
          ],
          "kind": "Element",
          "name": "Button",
          "props": [
            {
              "key": "id",
              "value": "{userId}",
            },
          ],
        },
      ],
      "type": "Layout",
    },
  ],
  "imports": [],
  "type": "UIHFile",
}
`;
